Remode DB hardcoding and provide Database reference to download

--- a/src/main/resources/application1.properties
+++ b/src/main/resources/application1.properties
@@ -15,3 +15,9 @@ gcs.stagingLocation=iot-dataflow/staging
 # BigQuery properties
 bq.datasetId=employee
 bq.empTable=emp_details_data
+
+#JDBC properties
+jdbc.driver=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://localhost:3306/employee
+jdbc.user=root
+jdbc.query=select e.emp_no,e.first_name,d.dept_no,d.from_date from employee.employees e inner join dept_emp d on e.emp_no=d.emp_no limit 100
