--- a/src/main/resources/application1.properties
+++ b/src/main/resources/application1.properties
@@ -16,11 +16,16 @@ gcs.stagingLocation=iot-dataflow/staging
 bq.datasetId=employee
 bq.empTable=emp_details_data
 
+# Spanner properties
+spanner.instanceId=spanner-test
+spanner.databaseId=employee
+
+
 #JDBC properties
 jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/employee
 jdbc.user=root
-jdbc.query=select e.emp_no,e.first_name,d.dept_no,d.from_date from employee.employees e inner join dept_emp d on e.emp_no=d.emp_no limit 100
+jdbc.query=select e.emp_no,e.first_name,e.birth_date,d.dept_no,d.from_date from employee.employees e inner join dept_emp d on e.emp_no=d.emp_no limit 20
 
 #CSV properties
 csv.location=gs://ristemp/employee.csv
