Add parquet and protobuf sources and sinks

--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<beam.version>2.5.0</beam.version>
+		<beam.version>2.6.0</beam.version>
 	</properties>
 
 	<dependencies>
@@ -35,6 +35,23 @@
 				<exclusion>
 					<groupId>com.google.api-client</groupId>
 					<artifactId>google-api-client</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.apache.beam/beam-sdks-java-io-parquet -->
+		<dependency>
+			<groupId>org.apache.beam</groupId>
+			<artifactId>beam-sdks-java-io-parquet</artifactId>
+			<version>2.6.0</version>
+			<exclusions>
+				<exclusion>
+					<groupId>commons-beanutils</groupId>
+					<artifactId>commons-beanutils-core</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>io.netty</groupId>
+					<artifactId>netty-all</artifactId>
 				</exclusion>
 			</exclusions>
 		</dependency>
@@ -84,11 +101,8 @@
 			<artifactId>google-http-client-jackson2</artifactId>
 			<version>1.23.0</version>
 		</dependency>
-		<dependency>
-			<groupId>com.google.api</groupId>
-			<artifactId>gax-grpc</artifactId>
-			<version>1.26.0</version>
-		</dependency>
+		<!-- <dependency> <groupId>com.google.api</groupId> <artifactId>gax-grpc</artifactId> 
+			<version>1.26.0</version> </dependency> -->
 		<dependency>
 			<groupId>com.google.api</groupId>
 			<artifactId>gax</artifactId>
@@ -107,18 +121,6 @@
 			<groupId>org.apache.beam</groupId>
 			<artifactId>beam-runners-google-cloud-dataflow-java</artifactId>
 			<version>${beam.version}</version>
-		</dependency>
-
-		<!-- slf4j API frontend binding with JUL backend -->
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-			<version>1.7.7</version>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-jdk14</artifactId>
-			<version>1.7.7</version>
 		</dependency>
 
 		<!-- GSON -->
@@ -152,6 +154,19 @@
 			<groupId>org.apache.avro</groupId>
 			<artifactId>avro-compiler</artifactId>
 			<version>1.8.2</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.apache.avro/avro-protobuf -->
+		<dependency>
+			<groupId>org.apache.avro</groupId>
+			<artifactId>avro-protobuf</artifactId>
+			<version>1.8.2</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.google.protobuf/protobuf-java -->
+		<dependency>
+			<groupId>com.google.protobuf</groupId>
+			<artifactId>protobuf-java</artifactId>
+			<version>3.6.0</version>
 		</dependency>
 
 		<!-- Configuration -->
@@ -204,8 +219,27 @@
 							<goal>schema</goal>
 						</goals>
 						<configuration>
-							<sourceDirectory>${project.basedir}/src/main/avro/</sourceDirectory>
+							<sourceDirectory>${project.basedir}/src/main/resources/</sourceDirectory>
 							<outputDirectory>${project.basedir}/src/main/java/</outputDirectory>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>com.github.os72</groupId>
+				<artifactId>protoc-jar-maven-plugin</artifactId>
+				<version>3.6.0.1</version>
+				<executions>
+					<execution>
+						<phase>generate-sources</phase>
+						<goals>
+							<goal>run</goal>
+						</goals>
+						<configuration>
+							<inputDirectories>
+								<include>src/main/resources</include>
+							</inputDirectories>
+							<outputDirectory>src/main/java</outputDirectory>
 						</configuration>
 					</execution>
 				</executions>
