--- a/src/main/resources/application1.properties
+++ b/src/main/resources/application1.properties
@@ -20,6 +20,8 @@ bq.empTable=emp_details_data
 spanner.instanceId=spanner-test
 spanner.databaseId=employee
 
+# Pub/Sub properties
+pubsub.subscription.spanner=projects/training-sandbox-sgp/subscriptions/pumpsubcriber
 
 #JDBC properties
 jdbc.driver=com.mysql.jdbc.Driver
@@ -28,4 +30,11 @@ jdbc.user=root
 jdbc.query=select e.emp_no,e.first_name,e.birth_date,d.dept_no,d.from_date from employee.employees e inner join dept_emp d on e.emp_no=d.emp_no limit 20
 
 #CSV properties
-csv.location=gs://ristemp/employee.csv
+csv.location=gs://ristemp/employeeTest.csv
+
+#Parquet properties
+parquet.location=gs://ristemp/parquet
+
+#Protobuf properties
+protobuf.location=gs://ristemp/emp.bin
+protofile.location=gs://ristemp/test.bin
