Upgraded to 2.11.0 and improved Avro processing

--- a/src/main/resources/application1.properties
+++ b/src/main/resources/application1.properties
@@ -30,7 +30,7 @@ jdbc.user=root
 jdbc.query=select e.emp_no,e.first_name,e.birth_date,d.dept_no,d.from_date from employee.employees e inner join dept_emp d on e.emp_no=d.emp_no limit 20
 
 #CSV properties
-csv.location=gs://ristemp/employeeTest.csv
+csv.location=gs://ristemp/employeeDept.csv
 
 #Parquet properties
 parquet.location=gs://ristemp/parquet
