--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<beam.version>2.6.0</beam.version>
+		<beam.version>2.11.0</beam.version>
 	</properties>
 
 	<dependencies>
@@ -31,19 +31,13 @@
 			<groupId>org.apache.beam</groupId>
 			<artifactId>beam-sdks-java-io-jdbc</artifactId>
 			<version>${beam.version}</version>
-			<exclusions>
-				<exclusion>
-					<groupId>com.google.api-client</groupId>
-					<artifactId>google-api-client</artifactId>
-				</exclusion>
-			</exclusions>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.apache.beam/beam-sdks-java-io-parquet -->
 		<dependency>
 			<groupId>org.apache.beam</groupId>
 			<artifactId>beam-sdks-java-io-parquet</artifactId>
-			<version>2.6.0</version>
+			<version>${beam.version}</version>
 			<exclusions>
 				<exclusion>
 					<groupId>commons-beanutils</groupId>
@@ -53,6 +47,10 @@
 					<groupId>io.netty</groupId>
 					<artifactId>netty-all</artifactId>
 				</exclusion>
+				<exclusion>
+					<groupId>org.slf4j</groupId>
+					<artifactId>slf4j-log4j12</artifactId>
+				</exclusion>
 			</exclusions>
 		</dependency>
 
@@ -61,12 +59,8 @@
 			<groupId>org.apache.beam</groupId>
 			<artifactId>beam-sdks-java-io-google-cloud-platform</artifactId>
 			<version>${beam.version}</version>
-			<exclusions>
-				<exclusion>
-					<groupId>com.google.api.grpc</groupId>
-					<artifactId>grpc-google-common-protos</artifactId>
-				</exclusion>
-			</exclusions>
+			<!-- <exclusions> <exclusion> <groupId>com.google.api.grpc</groupId> <artifactId>grpc-google-common-protos</artifactId> 
+				</exclusion> </exclusions> -->
 		</dependency>
 
 		<!-- For GCS -->
@@ -91,18 +85,7 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		<dependency>
-			<groupId>com.google.http-client</groupId>
-			<artifactId>google-http-client</artifactId>
-			<version>1.23.0</version>
-		</dependency>
-		<dependency>
-			<groupId>com.google.http-client</groupId>
-			<artifactId>google-http-client-jackson2</artifactId>
-			<version>1.23.0</version>
-		</dependency>
-		<!-- <dependency> <groupId>com.google.api</groupId> <artifactId>gax-grpc</artifactId> 
-			<version>1.26.0</version> </dependency> -->
+
 		<dependency>
 			<groupId>com.google.api</groupId>
 			<artifactId>gax</artifactId>
