--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,8 @@ gcp.projectId=training-sandbox-sgp
 # Dataflow properties
 df.appName=df
 df.baseJobName=df-
-df.maxWorkers=1
+df.maxWorkers=5
+df.minWorkers=2
 
 # GCS properties
 gcs.urlBase=gs://
