--- a/src/main/resources/application1.properties
+++ b/src/main/resources/application1.properties
@@ -14,11 +14,11 @@ gcs.stagingLocation=iot-dataflow/staging
 	
 # BigQuery properties
 bq.datasetId=employee
-bq.empTable=emp_details_data
+bq.empTable=emp
 
 # Spanner properties
 spanner.instanceId=spanner-test
-spanner.databaseId=employee
+spanner.databaseId=employeee
 
 # Pub/Sub properties
 pubsub.subscription.spanner=projects/training-sandbox-sgp/subscriptions/pumpsubcriber
