--- a/src/main/resources/application1.properties
+++ b/src/main/resources/application1.properties
@@ -19,6 +19,8 @@ bq.empTable=emp
 # Spanner properties
 spanner.instanceId=spanner-test
 spanner.databaseId=employeee
+spanner.table=emp
+spanner.columns=emp_id,birth_date,first_name
 
 # Pub/Sub properties
 pubsub.subscription.spanner=projects/training-sandbox-sgp/subscriptions/pumpsubcriber
