--- a/src/main/resources/application1.properties
+++ b/src/main/resources/application1.properties
@@ -5,16 +5,24 @@ gcp.projectId=training-sandbox-sgp
 df.appName=df
 df.baseJobName=df-
 df.maxWorkers=1
+df.region=us-central1
 
 # GCS properties
 gcs.urlBase=gs://
 gcs.bucketName=rislabs
+gcs.folderPath=gs://rislabs/text/*
+gcs.writeFolderPath=gs://rislabs/output/
 gcs.tempLocation=iot-dataflow/temp
 gcs.stagingLocation=iot-dataflow/staging
 	
 # BigQuery properties
 bq.datasetId=employee
 bq.empTable=emp
+
+# BigTable properties
+bt.instanceId=demo-bt-instance
+bt.tableId=demotable
+bt.dryRun=true
 
 # Spanner properties
 spanner.instanceId=spanner-test
@@ -23,7 +31,9 @@ spanner.table=emp
 spanner.columns=emp_id,birth_date,first_name
 
 # Pub/Sub properties
-pubsub.subscription.spanner=projects/training-sandbox-sgp/subscriptions/pumpsubcriber
+pubsub.subscription=projects/training-sandbox-sgp/subscriptions/pumpsubcriber
+pubsub.topic=projects/training-sandbox-sgp/topics/pump-topic
+pubsub.topic1=projects/training-sandbox-sgp/topics/pup_topic
 
 #JDBC properties
 jdbc.driver=com.mysql.jdbc.Driver
